--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,13 @@
 .container {
   width: 100%;
+  min-height: 100vh;
   margin: auto;
   padding: 2.5rem 0;
+  position: relative;
 }
 
 .main {
+  height: 100%;
   width: 90%;
   max-width: 900px;
   margin: auto;
