--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,13 +10,10 @@ body {
   margin: 0;
   font-family: 'Inter';
   background-color: #1c2128;
+  height: 100%;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
